I made several corrections to spacing, colors and layout

--- a/style.css
+++ b/style.css
@@ -1,55 +1,55 @@
-.card{
-    display: flex;
-    flex-direction: column;
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Outfit", sans-serif;
+}
 
-    max-width: 320px;
-    padding: 1rem;
-    gap: 1rem;
-
+.card {
+    display: grid;
+    width: 320px;
+    min-height: 499px;
+    padding: 16px 16px 40px 16px;
+    row-gap: 24px;
     background: white;
     border-radius: 20px;
-
-    box-shadow: 0 8px 24px rgba(0,0,0,0.08);
+    box-shadow: 0 25px 25px rgba(0, 0, 0, 0.0477);
 }
 
-.content{
+.content {
+    display: grid;
+    row-gap: 16px;
+    padding: 0 16px;
     text-align: center;
 }
-.qr-container{
-    padding:10px;
-    text-align: center;
-}
 
-body{
+body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    margin:0;
+    height: 100dvh;
+    width: 100dvw;
+    min-width: 375px;
     background-color: #d5e1ef;
-    line-height: 1.4;
 }
-img{
-    width: 90%;
+
+img {
     border-radius: 10px;
-    margin-bottom: 0.10rem;
-
-}
-.content{
-    font-size:15px;
-    font-family: 'Outfit', sans-serif;
-
 }
 
-h1{
-    font-size: 1.375rem;
-    font-weight: 700;
-    margin-bottom: 0 1rem;
-    margin-top: 0.10rem;
+h1 {
+    font-size: 22px;
+    font-weight: bold;
+    line-height: 120%;
+    letter-spacing: 0px;
+    color: rgb(31, 49, 79);
 }
 
-p2{
-    font-size: 0.9375rem;
-    padding: 0 1rem;
+p {
+    font-size: 15px;
+    line-height: 140%;
+    letter-spacing: 0.2px;
+    color: rgb(104, 119, 141);
 }
